--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/eZWg0bfBo5
-spring.datasource.username=eZWg0bfBo5
-spring.datasource.password=KPvcQWauff
+#spring.datasource.url=jdbc:mysql://remotemysql.com:3306/eZWg0bfBo5
+#spring.datasource.username=eZWg0bfBo5
+#spring.datasource.password=KPvcQWauff
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/joinsmart
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/eZWg0bfBo5
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
+
+server.port:8081
